# volume_approximation

.github/workflows/: testSDP.yml
R-proj/R/: RcppExports.R
R-proj/src/: Makevars  Makevars.win  convex_bodies_modules.cpp  generateSpectrahedron.cpp  optimization.cpp  sample_points.cpp  sample_spectrahedron.cpp  sdp_approx.cpp
include/cartesian_geom/: point.h
include/convex_bodies/: ConvexBody.h  LMI.h  hpolytope.h  spectrahedron.h
include/generators/: lp_generator.h
include/matrices/: DenseProductMatrix.h  EigenDenseMatrix.h  EigenvaluesProblems.h  QuadraticEigenvaluesProblem.h
include/optimization/: SimulatedAnnealing.h  SlidingWindow.h  cutting_plane.h  cutting_plane_sdp.h  lp_problem.h  optimization_misc.h  simulated_annealing.h  simulated_annealing_sdp.h
include/random_walks/: RandomDirectionsHitAndRun.h  RandomWalk.h  RandomWalkSettings.h  random_walk_misc.h
include/samplers/: HMC_RandomWalk.h  samplers.h
test/: CMakeLists.txt  HMC.cpp  test_proposal.cpp  vol.cpp
test/R scripts/: .RData  .Rhistory  cube_100.ine  cube_125.ine  cube_150.ine  cube_175.ine  cube_200.ine  cube_25.ine  cube_50.ine  cube_75.ine  test_eigen_implementation.R
tests_for_journal/: control1_initial.txt  control2_initial.txt  control3_initial.txt  control4_initial.txt  control5_initial.txt  control6_initial.txt  control7_initial.txt  control8_initial.txt  control9_initial.txt  gpp124-1.dat-s  gpp124-1_initial.txt  gpp124-2.dat-s  gpp124-2_initial.txt  gpp124-3.dat-s  gpp124-3_initial.txt  gpp124-4.dat-s  gpp124-4_initial.txt  gpp250-1.dat-s  gpp250-1_initial.txt  gpp250-2.dat-s  gpp250-2_initial.txt  gpp250-3.dat-s  gpp250-3_initial.txt  gpp250-4.dat-s  gpp250-4_initial.txt  journal.R  theta1_initial.txt  theta2_initial.txt  theta3_initial.txt  theta4_initial.txt  theta5_initial.txt
